feat: Add unit tests for missing test coverage for new beans
Signed-off-by: Kristiyan Selveliev <kristiyan.selveliev@limechain.tech>